Updated Configurations